# quantumsim

./: .gitignore  README.md  boundaries.hpp  constants.hpp  evolver.hpp  fwd.hpp  makefile  qsystem.hpp
1d/: CMakeLists.txt  debug.hpp  potential.hpp
1d/emulated/: region.hpp  wave.hpp  wave_packet.hpp
1d/evolvers/: crank_nicholson.hpp  evofw.hpp  explicit.hpp
1d/grid/: qsystem2D.cpp  wave.hpp
1d/math/: cases.hpp  composition.hpp  matrix_template.hpp  ptr_composition.hpp
1d/potentials/: barrier.hpp
2d/: CMakeLists.txt
2d/fem/: interpolation.hpp
2d/fem/components/: mass.hpp  matrix_component.cpp  matrix_component.hpp  stiffness.cpp  stiffness.hpp
2d/fem/mesh/: abstract_mesh.hpp  island_mesh.hpp  mesh.cpp
2d/fem/solvers/: poisson_solver.hpp
2d/src/: constants.cpp  scalar_field.hpp  types.cpp  types.hpp
2d/src/fe/components/: fe_component.hpp  load.cpp  load.hpp  mass.cpp  mass.hpp  matrix_component.cpp.old  matrix_component.hpp  stiffness.cpp  stiffness.hpp
2d/src/fe/mesh/: abstract_mesh.cpp  abstract_mesh.hpp  island_mesh.cpp  island_mesh.hpp  mesh.cpp  mesh.hpp
2d/src/fem/: interpolation.hpp
2d/src/fem/components/: load.cpp  load.hpp  mass.cpp  mass.hpp  matrix_component.cpp  matrix_component.hpp  stiffness.cpp  stiffness.hpp
2d/src/fem/mesh/: island_mesh.cpp  island_mesh.hpp  mesh.cpp  mesh.hpp
2d/src/fem/solvers/: fem_solver.hpp  poisson_solver.cpp
2d/src/integration/: integration.hpp  interpolation.cpp  interpolation.hpp
2d/src/solvers/: abstract_solver.hpp  bounded_particle.cpp  bounded_particle.hpp  laplace_solver.cpp  laplace_solver.hpp  poisson_solver.cpp  poisson_solver.hpp
2d/testing/: plot_mesh.py  plot_poisson.py  test_bounded.cpp  test_mesh.cpp  test_poisson.cpp  test_stiffness.cpp  test_vector.cpp
emulated/: observable.hpp  wave_packet.cpp
evolvers/: crank_nicholson.cpp  explicit.cpp
grid/: fw.hpp  integrators.hpp  qgridsystem.hpp  qsystem1D.cpp  qsystem1D.hpp  qsystem2D.hpp  wave.cpp
math/: diagonal.hpp  diagonals.hpp  matrix.hpp
potentials/: composed.hpp  uniform.hpp
